--- a/index.html
+++ b/index.html
@@ -368,12 +368,12 @@
               <img src="./img/roshan.JPG" class="silder" style="height: 560px; width: 100%;" alt="Chicago" style="width:100%;">
               <div class="carousel-caption">
                 <h3>Academic Progress</h3>
-                <p>Trubhuwan University</p>
+                <p>Tribhuwan University</p>
               </div>
             </div>
           
             <div class="item">
-              <img src="./img/qaa.JPG" class="silder" style="height: 560px; width: 100%;" alt="New York" style="width:100%;">
+              <img src="./img/qaa.jpg" class="silder" style="height: 560px; width: 100%;" alt="New York" style="width:100%;">
               <div class="carousel-caption">
                 <h3>QAA Certified</h3>
                 <p>First Private College for certification!</p>
